[cleanup] remove non-native rune switch logic #check-lint-warning
